tests/baselines/reference/importedAliasesInTypePositions.errors.txt
file1.ts(1,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
file1.ts(1,25): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
file1.ts(1,32): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
file1.ts(1,36): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== file2.ts (0 errors) ====
    import RT_ALIAS = require("file1");
    import ReferredTo = RT_ALIAS.elaborate.nested.mod.name.ReferredTo;
    
    export namespace ImportingModule {
        class UsesReferredType {
            constructor(private referred: ReferredTo) { }
        }
    }
==== file1.ts (4 errors) ====
    export module elaborate.nested.mod.name {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                                   ~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                                       ~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class ReferredTo {
            doSomething(): void {
            }
        }
    }
    